[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/NotoSansJP-Black.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Letter.gd" type="Script" id=2]
[ext_resource path="res://scripts/Area2D.gd" type="Script" id=3]
[ext_resource path="res://explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://new_particlesmaterial.tres" type="Material" id=5]
[ext_resource path="res://assets/350976__cabled-mess__boom-c-01.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/NicePng_asteroids-png_2168169.png" type="Texture" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.516129, 1 )
colors = PoolColorArray( 0.894118, 0.0509804, 0.0509804, 1, 0.690196, 0.360784, 0.211765, 1, 0.431373, 0.431373, 0.431373, 0.133333 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, -10, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 30.0
color_ramp = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 300
outline_size = 10
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 150.862, 174.06 )

[node name="Letter" type="Node2D"]
scale = Vector2( 0.199575, 0.227117 )
script = ExtResource( 2 )

[node name="Trailing" type="Particles2D" parent="."]
scale = Vector2( 1, 1 )
amount = 14
local_coords = false
process_material = SubResource( 3 )

[node name="NicePng_asteroids-png_2168169" type="Sprite" parent="."]
position = Vector2( -10.4999, 16.3234 )
scale = Vector2( 1.07304, 1 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.373
margin_top = -224.735
margin_right = 279.627
margin_bottom = 644.265
custom_fonts/font = SubResource( 4 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="areaLetter" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaLetter"]
position = Vector2( -12.7451, 8.17868 )
shape = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="Particle" parent="." instance=ExtResource( 4 )]
position = Vector2( 2.36255, 11.9073 )
scale = Vector2( 1.5996, 1.37496 )
emitting = false
lifetime = 0.7
one_shot = true
visibility_rect = Rect2( -200, -200, 400, 400 )
process_material = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -11.14

[connection signal="area_entered" from="areaLetter" to="." method="_on_areaLetter_area_entered"]
[connection signal="touchDetected" from="areaLetter" to="." method="_on_Area2D_touchDetected"]
